hphp/test/zend/bad/ext/intl/tests/timezone_getRegion_error.php
<?php
ini_set("intl.error_level", E_WARNING);

var_dump(IntlTimeZone::getRegion());
var_dump(IntlTimeZone::getRegion(array()));
var_dump(IntlTimeZone::getRegion('Europe/Lisbon', 4));
var_dump(IntlTimeZone::getRegion("foo\x81"));
var_dump(IntlTimeZone::getRegion("foo"));


